Make file extractors configurable to work with different file extensions