@@ -8,6 +8,7 @@ import io.annot8.api.components.annotations.SettingsClass;
 import io.annot8.api.components.responses.ProcessorResponse;
 import io.annot8.api.context.Context;
 import io.annot8.api.data.Item;
+import io.annot8.api.settings.Description;
 import io.annot8.common.components.AbstractProcessor;
 import io.annot8.common.components.AbstractProcessorDescriptor;
 import io.annot8.common.components.capabilities.SimpleCapabilities;
@@ -16,16 +17,19 @@ import io.annot8.common.data.content.Text;
 import java.io.File;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @ComponentName("Txt File Extractor")
 @ComponentDescription("Extract text from a *.txt file and create Text content")
 @SettingsClass(RemoveSourceContentSettings.class)
 public class TxtFileExtractor
-    extends AbstractProcessorDescriptor<TxtFileExtractor.Processor, RemoveSourceContentSettings> {
+    extends AbstractProcessorDescriptor<TxtFileExtractor.Processor, TxtFileExtractor.Settings> {
 
   @Override
-  protected Processor createComponent(Context context, RemoveSourceContentSettings settings) {
-    return new Processor(settings.isRemoveSourceContent());
+  protected Processor createComponent(Context context, Settings settings) {
+    return new Processor(settings.isRemoveSourceContent(), settings.getExtensions());
   }
 
   @Override
@@ -44,22 +48,26 @@ public class TxtFileExtractor
 
   public static class Processor extends AbstractProcessor {
     private final boolean removeSourceContent;
+    private final List<String> extensions;
 
-    public Processor(boolean removeSourceContent) {
+    public Processor(boolean removeSourceContent, List<String> extensions) {
       this.removeSourceContent = removeSourceContent;
+      this.extensions = extensions;
     }
 
     @Override
     public ProcessorResponse process(Item item) {
 
       item.getContents(FileContent.class)
-          .filter(f -> f.getData().getName().endsWith(".txt"))
+          .filter(
+              f ->
+                  extensions.isEmpty()
+                      || extensions.contains(getExtension(f.getData().getName()).orElse("")))
           .forEach(
               f -> {
                 try {
                   File file = f.getData();
-                  String data =
-                      new String(Files.readAllBytes(file.toPath()), Charset.defaultCharset());
+                  String data = Files.readString(file.toPath(), Charset.defaultCharset());
                   item.createContent(Text.class)
                       .withDescription("Text from " + f.getId())
                       .withData(data)
@@ -76,6 +84,31 @@ public class TxtFileExtractor
 
       // Always carry on it
       return ProcessorResponse.ok();
+    }
+
+    private Optional<String> getExtension(String filename) {
+      return Optional.ofNullable(filename)
+          .filter(f -> f.contains("."))
+          .map(f -> f.substring(filename.lastIndexOf(".") + 1).toLowerCase());
+    }
+  }
+
+  public static class Settings extends RemoveSourceContentSettings {
+    private List<String> extensions = List.of("txt");
+
+    @Description(
+        "The list of file extensions on which this processor will act (case insensitive). If empty, then the processor will act on all files.")
+    public List<String> getExtensions() {
+      return extensions;
+    }
+
+    public void setExtensions(List<String> extensions) {
+      this.extensions = extensions.stream().map(String::toLowerCase).collect(Collectors.toList());
+    }
+
+    @Override
+    public boolean validate() {
+      return super.validate() && extensions != null;
     }
   }
 }
